# claudia_usage_dashboard

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  usage.rs
src/components/: UsageDashboard.tsx  index.ts
src/lib/: api.ts
